{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 64,
  "lineage": "c4801b8a-0f85-e94b-7f2c-8e301960c3a1",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cc308c7382d44f7c",
            "arn": "arn:aws:ec2:us-east-1:505609109431:elastic-ip/eipalloc-0cc308c7382d44f7c",
            "domain": "vpc",
            "id": "eipalloc-0cc308c7382d44f7c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-202-49-61.compute-1.amazonaws.com",
            "public_ip": "34.202.49.61",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-eip-1",
              "Project": "fhir-cmc"
            },
            "tags_all": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-eip-1",
              "Project": "fhir-cmc"
            },
            "vpc": true
          },
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ddf90e3f70b3bb29",
            "arn": "arn:aws:ec2:us-east-1:505609109431:elastic-ip/eipalloc-0ddf90e3f70b3bb29",
            "domain": "vpc",
            "id": "eipalloc-0ddf90e3f70b3bb29",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-196-64-99.compute-1.amazonaws.com",
            "public_ip": "44.196.64.99",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-eip-2",
              "Project": "fhir-cmc"
            },
            "tags_all": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-eip-2",
              "Project": "fhir-cmc"
            },
            "vpc": true
          },
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505609109431:internet-gateway/igw-012a6399ece85d0d2",
            "id": "igw-012a6399ece85d0d2",
            "owner_id": "505609109431",
            "tags": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-igw",
              "Project": "fhir-cmc"
            },
            "tags_all": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-igw",
              "Project": "fhir-cmc"
            },
            "vpc_id": "vpc-03831be4ea84f9c08"
          },
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:loadbalancer/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad",
            "arn_suffix": "app/fhir-cmc-sponsor-alb/04ee456ba27f61ad",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "fhir-cmc-sponsor-alb-885507663.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:505609109431:loadbalancer/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "fhir-cmc-sponsor-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06ad3218540d0da29"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-086d2f7993fb8e3fb"
              },
              {
                "subnet_id": "subnet-0e246b3ec3216ac13"
              }
            ],
            "subnets": [
              "subnet-086d2f7993fb8e3fb",
              "subnet-0e246b3ec3216ac13"
            ],
            "tags": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-alb",
              "Project": "fhir-cmc"
            },
            "tags_all": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-alb",
              "Project": "fhir-cmc"
            },
            "vpc_id": "vpc-03831be4ea84f9c08",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/b17710b78ffd8ac2",
            "certificate_arn": "arn:aws:acm:us-east-1:505609109431:certificate/6deb3666-649d-4458-8886-5ff4a6abd534",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:targetgroup/fhir-cmc-sponsor-fhir-tg/6d0beb0d43b9653a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/b17710b78ffd8ac2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:loadbalancer/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 8443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_acm_certificate.domain",
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_lb.main",
            "module.network.aws_lb_target_group.fhir",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/530bae5c30286302",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/530bae5c30286302",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:loadbalancer/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_acm_certificate.domain",
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_lb.main",
            "module.network.aws_lb_target_group.frontend",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0",
            "certificate_arn": "arn:aws:acm:us-east-1:505609109431:certificate/6deb3666-649d-4458-8886-5ff4a6abd534",
            "default_action": [
              {
                "authenticate_cognito": [
                  {
                    "authentication_request_extra_params": null,
                    "on_unauthenticated_request": "authenticate",
                    "scope": "openid profile email",
                    "session_cookie_name": "fhir-cmc-sponsor-session",
                    "session_timeout": 86400,
                    "user_pool_arn": "arn:aws:cognito-idp:us-east-1:505609109431:userpool/us-east-1_ufKh02bYc",
                    "user_pool_client_id": "2ivcpn0kvg4omfordvem7ba1js",
                    "user_pool_domain": "fhir-cmc-sponsor"
                  }
                ],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "authenticate-cognito"
              },
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 2,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:targetgroup/fhir-cmc-sponsor-frontend-tg/016e63a6e7bbb6d4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:loadbalancer/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_acm_certificate.domain",
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_lb.main",
            "module.network.aws_lb_target_group.frontend",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_caller_identity.current",
            "module.network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api_fhir_domain_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:targetgroup/fhir-cmc-sponsor-fhir-tg/6d0beb0d43b9653a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener-rule/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0/495ffeff1c41fd90",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "api.sponsor-fhir.cmc-fhir-demo.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener-rule/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0/495ffeff1c41fd90",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0",
            "priority": 9,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_acm_certificate.domain",
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_lb.main",
            "module.network.aws_lb_listener.https",
            "module.network.aws_lb_target_group.fhir",
            "module.network.aws_lb_target_group.frontend",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_caller_identity.current",
            "module.network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:targetgroup/fhir-cmc-sponsor-backend-tg/485383622108982b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener-rule/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0/4357609868e8991c",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener-rule/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0/4357609868e8991c",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_acm_certificate.domain",
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_lb.main",
            "module.network.aws_lb_listener.https",
            "module.network.aws_lb_target_group.backend",
            "module.network.aws_lb_target_group.frontend",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_caller_identity.current",
            "module.network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api_https_fhir_path",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:targetgroup/fhir-cmc-sponsor-fhir-tg/6d0beb0d43b9653a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener-rule/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/b17710b78ffd8ac2/2d14b12dcd9692c9",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/fhir/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener-rule/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/b17710b78ffd8ac2/2d14b12dcd9692c9",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/b17710b78ffd8ac2",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_acm_certificate.domain",
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_lb.main",
            "module.network.aws_lb_listener.api_https",
            "module.network.aws_lb_target_group.fhir",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend_health_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend_health_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:targetgroup/fhir-cmc-sponsor-backend-tg/485383622108982b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener-rule/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0/e3605cfc87f25efc",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/health"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener-rule/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0/e3605cfc87f25efc",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0",
            "priority": 101,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_acm_certificate.domain",
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_lb.main",
            "module.network.aws_lb_listener.https",
            "module.network.aws_lb_target_group.backend",
            "module.network.aws_lb_target_group.frontend",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_caller_identity.current",
            "module.network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "fhir_domain_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [
                  {
                    "authentication_request_extra_params": null,
                    "on_unauthenticated_request": "authenticate",
                    "scope": "openid profile email",
                    "session_cookie_name": "fhir-cmc-sponsor-fhir-session",
                    "session_timeout": 86400,
                    "user_pool_arn": "arn:aws:cognito-idp:us-east-1:505609109431:userpool/us-east-1_ufKh02bYc",
                    "user_pool_client_id": "2ivcpn0kvg4omfordvem7ba1js",
                    "user_pool_domain": "fhir-cmc-sponsor"
                  }
                ],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "authenticate-cognito"
              },
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 2,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:targetgroup/fhir-cmc-sponsor-fhir-tg/6d0beb0d43b9653a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener-rule/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0/3559abe85b997b99",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "sponsor-fhir.cmc-fhir-demo.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener-rule/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0/3559abe85b997b99",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0",
            "priority": 8,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_acm_certificate.domain",
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_lb.main",
            "module.network.aws_lb_listener.https",
            "module.network.aws_lb_target_group.fhir",
            "module.network.aws_lb_target_group.frontend",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_caller_identity.current",
            "module.network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "fhir_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "fhir_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:targetgroup/fhir-cmc-sponsor-fhir-tg/6d0beb0d43b9653a",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener-rule/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0/7153848e390fd54d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/fhir/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener-rule/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0/7153848e390fd54d",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0",
            "priority": 200,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_acm_certificate.domain",
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_lb.main",
            "module.network.aws_lb_listener.https",
            "module.network.aws_lb_target_group.fhir",
            "module.network.aws_lb_target_group.frontend",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_caller_identity.current",
            "module.network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "frontend_health_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "frontend_health_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:targetgroup/fhir-cmc-sponsor-frontend-tg/016e63a6e7bbb6d4",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener-rule/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0/2466825f01f701bc",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/health"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener-rule/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0/2466825f01f701bc",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0",
            "priority": 10,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_acm_certificate.domain",
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_lb.main",
            "module.network.aws_lb_listener.https",
            "module.network.aws_lb_target_group.frontend",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_caller_identity.current",
            "module.network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "oauth_callback_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:targetgroup/fhir-cmc-sponsor-frontend-tg/016e63a6e7bbb6d4",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener-rule/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0/ef20d6815378aba6",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/oauth2/idpresponse"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener-rule/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0/ef20d6815378aba6",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:listener/app/fhir-cmc-sponsor-alb/04ee456ba27f61ad/08fe68709da3ebd0",
            "priority": 5,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_acm_certificate.domain",
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_lb.main",
            "module.network.aws_lb_listener.https",
            "module.network.aws_lb_target_group.frontend",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.network.data.aws_caller_identity.current",
            "module.network.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:targetgroup/fhir-cmc-sponsor-backend-tg/485383622108982b",
            "arn_suffix": "targetgroup/fhir-cmc-sponsor-backend-tg/485383622108982b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:505609109431:targetgroup/fhir-cmc-sponsor-backend-tg/485383622108982b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fhir-cmc-sponsor-backend-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-backend-tg",
              "Project": "fhir-cmc"
            },
            "tags_all": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-backend-tg",
              "Project": "fhir-cmc"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03831be4ea84f9c08"
          },
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "fhir",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:targetgroup/fhir-cmc-sponsor-fhir-tg/6d0beb0d43b9653a",
            "arn_suffix": "targetgroup/fhir-cmc-sponsor-fhir-tg/6d0beb0d43b9653a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/fhir/metadata",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:505609109431:targetgroup/fhir-cmc-sponsor-fhir-tg/6d0beb0d43b9653a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fhir-cmc-sponsor-fhir-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-fhir-tg",
              "Project": "fhir-cmc"
            },
            "tags_all": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-fhir-tg",
              "Project": "fhir-cmc"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03831be4ea84f9c08"
          },
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:505609109431:targetgroup/fhir-cmc-sponsor-frontend-tg/016e63a6e7bbb6d4",
            "arn_suffix": "targetgroup/fhir-cmc-sponsor-frontend-tg/016e63a6e7bbb6d4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:505609109431:targetgroup/fhir-cmc-sponsor-frontend-tg/016e63a6e7bbb6d4",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "fhir-cmc-sponsor-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-frontend-tg",
              "Project": "fhir-cmc"
            },
            "tags_all": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-frontend-tg",
              "Project": "fhir-cmc"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03831be4ea84f9c08"
          },
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cc308c7382d44f7c",
            "association_id": "eipassoc-0cee818fe261b6b68",
            "connectivity_type": "public",
            "id": "nat-075a7e04644f25581",
            "network_interface_id": "eni-098c940822924209f",
            "private_ip": "10.0.0.22",
            "public_ip": "34.202.49.61",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e246b3ec3216ac13",
            "tags": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-nat-1",
              "Project": "fhir-cmc"
            },
            "tags_all": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-nat-1",
              "Project": "fhir-cmc"
            }
          },
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ddf90e3f70b3bb29",
            "association_id": "eipassoc-042d99af0c75bf238",
            "connectivity_type": "public",
            "id": "nat-0742a1ad0457fe9ca",
            "network_interface_id": "eni-0cbb583502fa652a7",
            "private_ip": "10.0.1.250",
            "public_ip": "44.196.64.99",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-086d2f7993fb8e3fb",
            "tags": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-nat-2",
              "Project": "fhir-cmc"
            },
            "tags_all": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-nat-2",
              "Project": "fhir-cmc"
            }
          },
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505609109431:route-table/rtb-07d8a5588b7ea8b64",
            "id": "rtb-07d8a5588b7ea8b64",
            "owner_id": "505609109431",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-075a7e04644f25581",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-private-rt-1",
              "Project": "fhir-cmc"
            },
            "tags_all": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-private-rt-1",
              "Project": "fhir-cmc"
            },
            "timeouts": null,
            "vpc_id": "vpc-03831be4ea84f9c08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505609109431:route-table/rtb-03e5e9fab04c9d0f4",
            "id": "rtb-03e5e9fab04c9d0f4",
            "owner_id": "505609109431",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0742a1ad0457fe9ca",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-private-rt-2",
              "Project": "fhir-cmc"
            },
            "tags_all": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-private-rt-2",
              "Project": "fhir-cmc"
            },
            "timeouts": null,
            "vpc_id": "vpc-03831be4ea84f9c08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505609109431:route-table/rtb-0bea5d4730fe8ad66",
            "id": "rtb-0bea5d4730fe8ad66",
            "owner_id": "505609109431",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-012a6399ece85d0d2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-public-rt",
              "Project": "fhir-cmc"
            },
            "tags_all": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-public-rt",
              "Project": "fhir-cmc"
            },
            "timeouts": null,
            "vpc_id": "vpc-03831be4ea84f9c08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cb464b01a8c7bab",
            "route_table_id": "rtb-07d8a5588b7ea8b64",
            "subnet_id": "subnet-09ba02f61ae1c5111"
          },
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0648d6798572af84b",
            "route_table_id": "rtb-03e5e9fab04c9d0f4",
            "subnet_id": "subnet-0d71f9671bb10dda4"
          },
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ad389f6c89337e0",
            "route_table_id": "rtb-0bea5d4730fe8ad66",
            "subnet_id": "subnet-0e246b3ec3216ac13"
          },
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05174964217d28a56",
            "route_table_id": "rtb-0bea5d4730fe8ad66",
            "subnet_id": "subnet-086d2f7993fb8e3fb"
          },
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505609109431:security-group/sg-06ad3218540d0da29",
            "description": "Security group for application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ad3218540d0da29",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8443
              }
            ],
            "name": "fhir-cmc-sponsor-alb-sg",
            "name_prefix": "",
            "owner_id": "505609109431",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-alb-sg",
              "Project": "fhir-cmc"
            },
            "tags_all": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-alb-sg",
              "Project": "fhir-cmc"
            },
            "timeouts": null,
            "vpc_id": "vpc-03831be4ea84f9c08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505609109431:security-group/sg-03b3a2e52b67cc9cc",
            "description": "Security group for RDS database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b3a2e52b67cc9cc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b311f41576bf59c6"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "fhir-cmc-sponsor-database-sg",
            "name_prefix": "",
            "owner_id": "505609109431",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-database-sg",
              "Project": "fhir-cmc"
            },
            "tags_all": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-database-sg",
              "Project": "fhir-cmc"
            },
            "timeouts": null,
            "vpc_id": "vpc-03831be4ea84f9c08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.ecs",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505609109431:security-group/sg-0b311f41576bf59c6",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b311f41576bf59c6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-06ad3218540d0da29"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "fhir-cmc-sponsor-ecs-sg",
            "name_prefix": "",
            "owner_id": "505609109431",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-ecs-sg",
              "Project": "fhir-cmc"
            },
            "tags_all": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-ecs-sg",
              "Project": "fhir-cmc"
            },
            "timeouts": null,
            "vpc_id": "vpc-03831be4ea84f9c08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_security_group.alb",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505609109431:subnet/subnet-012bbf51a0f3583f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012bbf51a0f3583f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "505609109431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-database-1",
              "Project": "fhir-cmc"
            },
            "tags_all": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-database-1",
              "Project": "fhir-cmc"
            },
            "vpc_id": "vpc-03831be4ea84f9c08"
          },
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505609109431:subnet/subnet-07dfb8835ad3114f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07dfb8835ad3114f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "505609109431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-database-2",
              "Project": "fhir-cmc"
            },
            "tags_all": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-database-2",
              "Project": "fhir-cmc"
            },
            "vpc_id": "vpc-03831be4ea84f9c08"
          },
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505609109431:subnet/subnet-09ba02f61ae1c5111",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ba02f61ae1c5111",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "505609109431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-private-1",
              "Project": "fhir-cmc"
            },
            "tags_all": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-private-1",
              "Project": "fhir-cmc"
            },
            "vpc_id": "vpc-03831be4ea84f9c08"
          },
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505609109431:subnet/subnet-0d71f9671bb10dda4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d71f9671bb10dda4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "505609109431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-private-2",
              "Project": "fhir-cmc"
            },
            "tags_all": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-private-2",
              "Project": "fhir-cmc"
            },
            "vpc_id": "vpc-03831be4ea84f9c08"
          },
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505609109431:subnet/subnet-0e246b3ec3216ac13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e246b3ec3216ac13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "505609109431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-public-1",
              "Project": "fhir-cmc"
            },
            "tags_all": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-public-1",
              "Project": "fhir-cmc"
            },
            "vpc_id": "vpc-03831be4ea84f9c08"
          },
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505609109431:subnet/subnet-086d2f7993fb8e3fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086d2f7993fb8e3fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "505609109431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-public-2",
              "Project": "fhir-cmc"
            },
            "tags_all": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-public-2",
              "Project": "fhir-cmc"
            },
            "vpc_id": "vpc-03831be4ea84f9c08"
          },
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:505609109431:vpc/vpc-03831be4ea84f9c08",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a087b57ae5d0daeb",
            "default_route_table_id": "rtb-004849798159a3194",
            "default_security_group_id": "sg-0f99fbf0a6e8ba5b6",
            "dhcp_options_id": "dopt-0257c782abd2acf0b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03831be4ea84f9c08",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-004849798159a3194",
            "owner_id": "505609109431",
            "tags": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-vpc",
              "Project": "fhir-cmc"
            },
            "tags_all": {
              "Environment": "sponsor",
              "Name": "fhir-cmc-sponsor-vpc",
              "Project": "fhir-cmc"
            }
          },
          "dependencies": [
            "module.cognito.aws_cognito_identity_pool.main",
            "module.cognito.aws_cognito_identity_pool_roles_attachment.main",
            "module.cognito.aws_cognito_resource_server.backend",
            "module.cognito.aws_cognito_resource_server.fhir",
            "module.cognito.aws_cognito_user_pool.main",
            "module.cognito.aws_cognito_user_pool_client.backend",
            "module.cognito.aws_cognito_user_pool_client.fhir",
            "module.cognito.aws_cognito_user_pool_client.frontend",
            "module.cognito.aws_cognito_user_pool_domain.main",
            "module.cognito.aws_iam_role.authenticated",
            "module.cognito.aws_iam_role_policy.authenticated",
            "module.cognito.data.aws_region.current"
          ]
        }
      ]
    }
  ]
}